# speechmatics-link

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
.vcon-repo/: graph.json
speechmatics_vcon_link/: __init__.py  client.py  converter.py
tests/: __init__.py  conftest.py  test_client.py  test_converter.py  test_integration.py  test_link.py
tests/fixtures/: __init__.py  real_speechmatics_response.json  real_wtf_output.json  sample_speechmatics_response.json  sample_wtf_format.json
